# 2021-inf494-vis

./: .gitignore  .gitmodules  Moody.tex  README.md  asset-manifest.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml
data/: any_toxicity.json  default.json  identity_hate_and_insult.json  positive_and_toxic.json  positive_or_negative.json
moody/: __init__.py  train-sentiment-classifier.py  train-subject-classifier.py  train-toxicity-classifier.py
moody/static/: app.js
moody/templates/: index.html
parts/: document.tex
public/: index.html
public/data/: brazil.json
src/: App.css  App.tsx  QueryDatasetForm.tsx  SubjectPlot.tsx  Tabbed.tsx  TernaryPlot.tsx  ToxicityPlot.tsx  common.ts  common.tsx  index.css
static/js/: 2.08669712.chunk.js  2.d48bb76d.chunk.js  2.d48bb76d.chunk.js.LICENSE.txt  main.68e1b257.chunk.js  main.68e1b257.chunk.js.map  main.7e72511e.chunk.js  main.7e72511e.chunk.js.map  main.f577719e.chunk.js  main.f577719e.chunk.js.map  main.f6e807c3.chunk.js  main.f6e807c3.chunk.js.map  runtime-main.98977f36.js  runtime-main.98977f36.js.map  runtime-main.e6c91ecb.js  runtime-main.e6c91ecb.js.map
tp/: __init__.py  train-news-adapter.py  train-sentiment-adapter-lr.py  train-sentiment-adapter.py  train-sentiment-classifier.py  train-subject-classifier.py  train-toxicity-adapter.py
tp/adapters/: __init__.py  adapter.py  news.py  sentiment.py  toxicity.py
tp/templates/: index.html
