[tool.poetry]
name = "moody"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
zstandard = "*"
scikit-learn = "*"
pandas = "*"
Flask = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
