[tool.poetry]
name = "moody"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
zstandard = "^0.15.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
joblib = "^1.0.1"
tqdm = "^4.60.0"
fastapi = "^0.65.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
