[tool.isort]
profile = "black"

[tool.poetry]
name = "moody"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
zstandard = "^0.15.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
tqdm = "^4.60.0"
fastapi = "^0.65.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
